--- a/dl/week3/hpcd.ipynb
+++ b/dl/week3/hpcd.ipynb
@@ -1914,7 +1914,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1929,6 +1929,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b2b3490ab97e9e12756aa89c01d5382ca6cf08cdaa9c454d9749392520b38d26"
+   }
   }
  },
  "nbformat": 4,
